# wirecat

./: .gitignore  .tricorder.yaml  Justfile  README.md  cabal.project  flake.nix
examples/: examples.cabal
examples/app/: Main.hs
tutorial/: wirecat-blog.cabal
tutorial/src/Tutorial/: Category.hs  Example.hs  Label.hs  Mermaid.hs
tutorial/src/Tutorial/Effects/: Free.hs  MTL.hs  Mixed.hs
viewer/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
viewer/src/: App.tsx  ProcNode.tsx  SplineEdge.tsx  layout.ts  styles.css  types.ts
wirecat/: wirecat.cabal
wirecat/src/: WireCat.hs
wirecat/src/GHC/Compat/: All.hs  Expr.hs
wirecat/src/WireCat/: Dot.hs  Free.hs  Graph.hs  Json.hs  Label.hs  Plugin.hs  QQ.hs  Records.hs  TH.hs
wirecat/src/WireCat/Plugin/: Records.hs  Rewrite.hs
wirecat/test/: Tests.hs
wirecat/test/WireCat/Test/: Dot.hs  Records.hs
