cabal-version:      3.0
name:               examples
version:            0.1.0.0
synopsis:           Examples for wirecat
description:
  Small manual examples and executables for the wirecat library.
license:            BSD-3-Clause
author:             Juan Raphael Diaz Simoes
maintainer:         Juan Raphael Diaz Simoes
category:           Example
build-type:         Simple
tested-with:        GHC == 9.12.2

executable examples
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , wirecat
    , containers
    , directory
    , filepath
    , optparse-applicative
    , row-types
