cabal-version:      3.0
name:               wirecat
version:            0.4.0
synopsis:           Proc notation for typed categorical wiring diagrams
description:
  A GHC plugin and library for writing typed categorical wiring diagrams
  with a restricted fragment of Haskell @proc@ notation.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus
maintainer:         Juan Raphael Diaz Simoes
category:           Plugin
extra-source-files: CHANGELOG.md
tested-with:        GHC == 9.12.2

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    WireCat
    WireCat.Dot
    WireCat.Free
    WireCat.Graph
    WireCat.Json
    WireCat.Label
    WireCat.Plugin
    WireCat.Records

  other-modules:
    GHC.Compat.All
    GHC.Compat.Expr
    WireCat.Plugin.Records
    WireCat.Plugin.Rewrite

  build-depends:
    , aeson       ^>=2.2
    , base        ^>=4.21.0.0
    , bytestring  ^>=0.12
    , containers  ^>=0.7
    , ghc         ^>=9.12
    , graphviz    ^>=2999.20
    , mtl         ^>=2.3
    , row-types   ^>=1.0
    , syb         ^>=0.7.3
    , text        >=2.0 && <2.2

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  other-modules:
    WireCat.Test.Dot
    WireCat.Test.Records

  build-depends:
    , base
    , wirecat
    , containers
    , graphviz
    , row-types
    , tasty
    , tasty-hunit
